--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="96x96" href="assets/main.png" />
-  <meta name="description" content="Application to improve control of expiration dates">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@600&display=swap" rel="stylesheet">
+  <meta name="description" content="Application to improve the review of expiration dates">
   <title>Expiry Dates</title>
 </head>
 
